# quantum-context

./: .gitignore  CHANGELOG.md  CLAUDE_SETUP.md  LICENSE  MCP_SETUP.md  PUBLISHING.md  README.md  RESPONSIBLE_USE.md  SUMMARY.md  THEORY.md  install.sh  mcp_server.py  publish.sh  pyproject.toml  skill.md
docs/: friction-gradient.md  proprioceptive-cybernetics.md
examples/: alice_bob_test.py  analyze_threshold.py  debug_correlation.py  test_independence_fix.py  test_real_usage.py  use_case_examples.py  wave_interference_test.py
experiments/: devils_advocate.py  hyperbolic_exploration.py
quantum_context/: __init__.py  __main__.py  compare.py  core.py  models.py  wave.py
tests/: test_paradigm.py  test_phase.py
