[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum-context"
version = "0.1.0"
description = "Observer-relative knowledge graph using wave function compression"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Hallie Larsson, Unity Environmental University", email = "hallie@unity.edu" }
]
keywords = ["knowledge-graph", "quantum", "observer-relative", "ai-continuity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["quantum_context"]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
